--- a/src/Artemis.UI/Artemis.UI.csproj
+++ b/src/Artemis.UI/Artemis.UI.csproj
@@ -14,28 +14,34 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Avalonia" Version="0.10.18" />
-        <PackageReference Include="Avalonia.Controls.PanAndZoom" Version="10.14.0" />
-        <PackageReference Include="Avalonia.Controls.Skia" Version="0.10.16" />
-        <PackageReference Include="Avalonia.Desktop" Version="0.10.18" />
+        <PackageReference Include="Avalonia" Version="11.0.0-preview2" />
+        <PackageReference Include="Avalonia.Controls.PanAndZoom" Version="11.0.0-preview2" />
+        <PackageReference Include="Avalonia.Controls.Skia" Version="11.0.0-preview2" />
+        <PackageReference Include="Avalonia.Desktop" Version="11.0.0-preview2" />
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
-        <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.18" />
-        <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.18" />
-        <PackageReference Include="Avalonia.Xaml.Behaviors" Version="0.10.18" />
+        <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.0-preview2" />
+        <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.0-preview2" />
+        <PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.0.0-preview2" />
         <PackageReference Include="DynamicData" Version="7.9.14" />
-        <PackageReference Include="FluentAvaloniaUI" Version="1.4.1" />
+        <PackageReference Include="FluentAvaloniaUI" Version="2.0.0-preview2" />
         <PackageReference Include="Flurl.Http" Version="3.2.4" />
         <PackageReference Include="Live.Avalonia" Version="1.3.1" />
-        <PackageReference Include="Material.Icons.Avalonia" Version="1.1.10" />
-        <PackageReference Include="ReactiveUI" Version="17.1.50" />
+        <PackageReference Include="Material.Icons.Avalonia" Version="1.2.0" />
+        <PackageReference Include="ReactiveUI" Version="18.3.1" />
         <PackageReference Include="ReactiveUI.Validation" Version="2.2.1" />
         <PackageReference Include="RGB.NET.Core" Version="1.0.0-prerelease.46" />
         <PackageReference Include="RGB.NET.Layout" Version="1.0.0-prerelease.46" />
-        <PackageReference Include="SkiaSharp" Version="2.88.1-preview.108" />
+        <PackageReference Include="SkiaSharp" Version="2.88.3" />
         <PackageReference Include="Splat.Ninject" Version="14.4.1" />
     </ItemGroup>
 
     <ItemGroup>
         <AvaloniaResource Include="Assets\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="FluentAvalonia">
+        <HintPath>..\..\..\..\Users\Robert\.nuget\packages\fluentavaloniaui\1.4.1\lib\net6.0\FluentAvalonia.dll</HintPath>
+      </Reference>
     </ItemGroup>
 </Project>
