--- a/src/Artemis.VisualScripting/Artemis.VisualScripting.csproj
+++ b/src/Artemis.VisualScripting/Artemis.VisualScripting.csproj
@@ -8,14 +8,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Avalonia" Version="0.10.18" />
-        <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.18" />
-        <PackageReference Include="Avalonia.Xaml.Behaviors" Version="0.10.18" />
+        <PackageReference Include="Avalonia" Version="11.0.0-preview2" />
+        <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.0-preview2" />
+        <PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.0.0-preview2" />
         <PackageReference Include="Ninject" Version="3.3.6" />
         <PackageReference Include="NoStringEvaluating" Version="2.4.0" />
-        <PackageReference Include="ReactiveUI" Version="17.1.50" />
+        <PackageReference Include="ReactiveUI" Version="18.3.1" />
         <PackageReference Include="ReactiveUI.Validation" Version="2.2.1" />
-        <PackageReference Include="SkiaSharp" Version="2.88.1-preview.108" />
+        <PackageReference Include="SkiaSharp" Version="2.88.3" />
     </ItemGroup>
 
     <ItemGroup>
